Pagination improved and links to movies and tv shows search are now working

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     </div>
                     <div class="search-flex">
                         <input type="text" name="search-term" id="search-term" placeholder="Enter search term" />
+                        <input type="hidden" name="page" id="page" value="1" />
                         <button class="btn" type="submit">
                             <i class="fas fa-search"></i>
                         </button>
